# sm-ac-tools

./: AUTHORS  README  configure.ac
src/: Makefile.am  Makefile.in  dbgutil.h  getkey.c  getkey.h  itg2-decrypt.c  itg2-encrypt.c  itg2-keydump.c  itg2-patch-decrypt.c  itg2-patch-encrypt.c  itg2-static-decrypt.c  keydump.h  patch-constants.h  ppro-decrypt.c  ppro-encrypt.c  ppro-keydump.c  ppro-patch-decrypt.c  ppro-patch-encrypt.c  ppro-static-decrypt.c
src/.deps/: aescrypt.P  aescrypt.Po  aeskey.P  aeskey.Po  aestab.P  aestab.Po  atod20.P  atod20.Po  atod26.P  atod26.Po  cnt1d.P  cnt1d.Po  crcutil.P  crcutil.Po  dbgutil.Po  ds2480ut.P  ds2480ut.Po  findtype.P  findtype.Po  getkey.Po  getkeyandstuff.Po  humutil.P  ibsha33o.P  ioutil.P  ioutil.Po  itg2-decrypt.Po  itg2-encrypt.Po  itg2-keydump.Po  itg2-patch-decrypt.Po  itg2-patch-encrypt.Po  itg2-static-decrypt.Po  keydump-itg2.Po  keydump-ppro.Po  keydump.Po  linuxlnk.P  linuxlnk.Po  main.P  main.Po  mbappreg.P  mbappreg.Po  (+88 more)
