bin_PROGRAMS = itg2-decrypt ppro-decrypt itg2-encrypt ppro-encrypt ppro-patch-decrypt ppro-patch-encrypt itg2-patch-encrypt itg2-patch-decrypt itg2-static-decrypt itg2-keydump ppro-keydump ppro-static-decrypt

itg2_keydump_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
crcutil.c \
ds2480ut.c \
linuxlnk.c \
owerr.c \
owllu.c \
ownetu.c \
owsesu.c \
owtrnu.c \
sha18.c \
shaib.c \
getkey.c \
dbgutil.c \
itg2-keydump.c

itg2_keydump_headers = \
config.h \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
ds2480.h \
owfile.h \
ownet.h \
shaib.h \
getkey.h

itg2_decrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
crcutil.c \
ds2480ut.c \
linuxlnk.c \
owerr.c \
owllu.c \
ownetu.c \
owsesu.c \
owtrnu.c \
sha18.c \
shaib.c \
getkey.c \
dbgutil.c \
itg2-decrypt.c

itg2_decrypt_headers = \
config.h \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
ds2480.h \
owfile.h \
ownet.h \
shaib.h \
getkey.h

itg2_encrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
crcutil.c \
ds2480ut.c \
linuxlnk.c \
owerr.c \
owllu.c \
ownetu.c \
owsesu.c \
owtrnu.c \
sha18.c \
shaib.c \
getkey.c \
dbgutil.c \
itg2-encrypt.c

itg2_encrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
ds2480.h \
owfile.h \
ownet.h \
shaib.h \
getkey.h

itg2_static_decrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
dbgutil.c \
itg2-static-decrypt.c

itg2_static_decrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h

ppro_keydump_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
crcutil.c \
ds2480ut.c \
linuxlnk.c \
owerr.c \
owllu.c \
ownetu.c \
owsesu.c \
owtrnu.c \
sha18.c \
shaib.c \
getkey.c \
dbgutil.c \
ppro-keydump.c

ppro_keydump_headers = \
config.h \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
ds2480.h \
owfile.h \
ownet.h \
shaib.h \
getkey.h

ppro_keydump_LDFLAGS = -lgcrypt

ppro_decrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
crcutil.c \
ds2480ut.c \
linuxlnk.c \
owerr.c \
owllu.c \
ownetu.c \
owsesu.c \
owtrnu.c \
sha18.c \
shaib.c \
getkey.c \
dbgutil.c \
ppro-decrypt.c

ppro_decrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
ds2480.h \
owfile.h \
ownet.h \
shaib.h \
getkey.h

ppro_decrypt_LDFLAGS = -lgcrypt

ppro_encrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
crcutil.c \
ds2480ut.c \
linuxlnk.c \
owerr.c \
owllu.c \
ownetu.c \
owsesu.c \
owtrnu.c \
sha18.c \
shaib.c \
getkey.c \
dbgutil.c \
ppro-encrypt.c

ppro_encrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
ds2480.h \
owfile.h \
ownet.h \
shaib.h \
getkey.h

ppro_encrypt_LDFLAGS = -lgcrypt

ppro_patch_decrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
dbgutil.c \
ppro-patch-decrypt.c

ppro_patch_decrypt_LDFLAGS = -lgcrypt

ppro_patch_decrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
patch-constants.h

ppro_patch_encrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
dbgutil.c \
ppro-patch-encrypt.c

ppro_patch_encrypt_LDFLAGS = -lgcrypt

ppro_patch_encrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
patch-constants.h

itg2_patch_decrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
dbgutil.c \
itg2-patch-decrypt.c

itg2_patch_decrypt_LDFLAGS = -lgcrypt

itg2_patch_decrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
patch-constants.h

itg2_patch_encrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
dbgutil.c \
itg2-patch-encrypt.c

itg2_patch_encrypt_LDFLAGS = -lgcrypt

itg2_patch_encrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h \
patch-constants.h

ppro_static_decrypt_SOURCES = \
keydump.c \
aescrypt.c \
aeskey.c \
aestab.c \
dbgutil.c \
ppro-static-decrypt.c

ppro_static_decrypt_headers = \
keydump.h \
aes.h \
aesopt.h \
aestab.h
